--- a/homework_2-2.tex
+++ b/homework_2-2.tex
@@ -81,7 +81,7 @@ Homework 2: Altaf Barelvi}}
 	The smaller the step size, the better the forward method's will closely follow the analytical solution.
 	\item Define the maximum absolute error for a simulation using a particular $\Delta t$ as $$E(\Delta t) = \max_{t} \big | I_{\text{Euler}, \Delta t} (t) - I_\text{analytical}(t) \big |\ .$$ Write a function that runs the appropriate simulation, computes the analytical solution, and returns $E$ without plotting. Share a link to your code for this problem.
 	\par
-	INSERT LINK LATER
+	\href{https://github.com/ctrlaltaf/CSCI-5897-hw2}{Code here}
 	\item Create a plot on log-log axes showing $E(\Delta t)$ vs $\Delta t$ for values $$\Delta t \in \{2,1,\tfrac{1}{2},\tfrac{1}{4},\tfrac{1}{8},\tfrac{1}{16},\tfrac{1}{32}\}$$
 	\begin{figure}[H]
 		\centering
