--- a/code.ipynb
+++ b/code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "bc9f4ec2",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "04c907d3",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e72193d4",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3c222402",
    "metadata": {},
    "outputs": [],
@@ -190,12 +190,12 @@
    "id": "dd4e6a78",
    "metadata": {},
    "source": [
-    "Q1.d"
+    "Q1.c/d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "9575ae41",
    "metadata": {},
    "outputs": [
@@ -209,18 +209,16 @@
       "dt = 0.25  ->  E(dt) = 0.02200\n",
       "dt = 0.125  ->  E(dt) = 0.01111\n",
       "dt = 0.0625  ->  E(dt) = 0.00558\n",
-      "dt = 0.03125  ->  E(dt) = 0.00280\n",
-      "[2, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125]\n",
-      "[np.float64(0.1263393498870075), np.float64(0.08077107437456943), np.float64(0.04283504637204699), np.float64(0.02199772042578743), np.float64(0.011110659764940939), np.float64(0.005580919660415989), np.float64(0.002795846918956485)]\n"
+      "dt = 0.03125  ->  E(dt) = 0.00280\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12ff991d0>"
+       "<matplotlib.legend.Legend at 0x10cd6ed50>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,6 +235,8 @@
    ],
    "source": [
     "# Try different deltas\n",
+    "\n",
+    "# Question 1.c\n",
     "deltas = [2, 1, 1/2, 1/4, 1/8, 1/16, 1/32]\n",
     "ets = []\n",
     "\n",
@@ -245,9 +245,9 @@
     "    ets.append(max_abs_error(s0, i0, beta, gamma, t_max, dt))\n",
     "    print(f\"dt = {dt:<4}  ->  E(dt) = {ets[i]:.5f}\")\n",
     "    i+=1\n",
-    "print(deltas)\n",
-    "print(ets)\n",
     "\n",
+    "\n",
+    "#Question 1.d\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(deltas, ets, color='blue', s=30, label='Max error')\n",
     "ax.set_xscale(\"log\")\n",
@@ -258,6 +258,14 @@
     "fig.savefig(\"figures/max_abs_error.png\", dpi=300, bbox_inches='tight')\n",
     "ax.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a08d4b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
