--- a/homework_2-2.tex
+++ b/homework_2-2.tex
@@ -40,12 +40,7 @@ Homework 2: Altaf Barelvi}}
 \rhead{{\bf D.B.\ Larremore\\2025}}
 \renewcommand{\headrulewidth}{0.4pt}
 
-{\bf Instructions:} 
-\begin{itemize}[itemsep=-7pt]
-	\item Please turn in a single PDF file. 
-	\item Please share a link to your code, but do not attach the actual code. 
-	\item Handwritten math (scanned and included in a PDF) is fine, but please watch out for 10MB+ file sizes!
-\end{itemize}
+I collaborated with Violet Ross and Ben Aoki-Sherwood by going through the Pset when we were all done.
 \vspace{0.1in}\hrule
 
 \begin{enumerate}
@@ -81,7 +76,7 @@ Homework 2: Altaf Barelvi}}
 	The smaller the step size, the better the forward method's will closely follow the analytical solution.
 	\item Define the maximum absolute error for a simulation using a particular $\Delta t$ as $$E(\Delta t) = \max_{t} \big | I_{\text{Euler}, \Delta t} (t) - I_\text{analytical}(t) \big |\ .$$ Write a function that runs the appropriate simulation, computes the analytical solution, and returns $E$ without plotting. Share a link to your code for this problem.
 	\par
-	\href{https://github.com/ctrlaltaf/CSCI-5897-hw2}{Code here}
+	\href{https://github.com/ctrlaltaf/CSCI-5897-hw2/blob/main/code.ipynb}{Code here}
 	\item Create a plot on log-log axes showing $E(\Delta t)$ vs $\Delta t$ for values $$\Delta t \in \{2,1,\tfrac{1}{2},\tfrac{1}{4},\tfrac{1}{8},\tfrac{1}{16},\tfrac{1}{32}\}$$
 	\begin{figure}[H]
 		\centering
